Fix: duplicate serving price on order_success.html

--- a/checkout/templates/checkout/order_success.html
+++ b/checkout/templates/checkout/order_success.html
@@ -98,7 +98,7 @@
                                     <div class="row">
                                         <div class="col-6 my-auto">
                                             {% for product in products %}
-                                                {% if product.name == item.name %}
+                                                {% if product.name == item.name  and product.category|slugify == item.category %}
                                                     <div class="text-blue text-xs">
                                                         per serving
                                                     </div>
