--- a/products/templates/products/search_products.html
+++ b/products/templates/products/search_products.html
@@ -26,15 +26,36 @@
                     <img class="img-fluid image-80" src="{{ MEDIA_URL }}assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
                 </div>
                 <div class="col-xl-6">
-                    <div class="text-center h-100 project">
+                    <div class="h-100 project">
                         <div class="d-flex h-100">
-                            <div class="product-container w-100 mt-0 text-center text-xl-left">
+                            <div class="product-container w-100 mt-0 text-xl-left">
                                 {% for product in product_results %}
-                                    <div class="mx-auto flex-margin-b text-blue">
-                                        <a class="product-text-two" href="{% url 'product_detail' %}?category_product={{ product.category }},{{ product.name }},selected-one">{{ product.category.friendly_name }}: {{ product.name }}</a>
+                                    <div class="mx-auto flex-margin-b text-blue row">
+                                        <div class ="col-9">
+                                            <a class="product-text-two" href="{% url 'product_detail' %}?category_product={{ product.category }},{{ product.name }},selected-one">{{ product.category.friendly_name }}: {{ product.name }}</a>
+                                            <span class="allergy-text">
+                                                {% if product.allergies|slice:"0:1" == '1' %}
+                                                    <i class="fas fa-carrot"></i>
+                                                {% endif %}
+                                                {% if product.allergies|slice:"1:2" == '1' %}
+                                                    <i class="fas fa-leaf"></i>
+                                                {% endif %}
+                                                {% if product.allergies|slice:"2:3" == '1' %}
+                                                    <i class="fas fa-fish"></i>
+                                                {% endif %}
+                                                {% if product.allergies|slice:"3:4" == '1' %}
+                                                    <i class="fas fa-allergies"></i>
+                                                {% endif %}
+                                            </span>
+                                        </div>
+                                        <div class ="col-3">
+                                            <span class="product-text-two float-right">£{{ product.price }}</span>
+                                        </div>
                                     </div>
                                 {% endfor %}
-                                <hr class="d-none d-xl-block mb-0 ml-0" />
+                                <hr class="mb-0 ml-0" />
+                                <br class="d-none d-xl-block">
+                                <span class="allergy-text text-lightblue">* vegan <i class="fas fa-carrot"></i>, vegetarian <i class="fas fa-leaf"></i>, pescetarian <i class="fas fa-fish"></i> and allergy-advice <i class="fas fa-allergies"></i></span>
                             </div>
                         </div>
                     </div>
