--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -65,7 +65,7 @@
                                 {% for product in products %}
                                     {% if range %}
                                         <!-- Credit: https://stackoverflow.com/questions/27771000/django-template-convert-to-string -->
-                                        {% if product.range == range and product.category|slugify == category %}
+                                        {% if product.range == range and product.category|slugify == category|slugify %}
                                             <div class="px-3 flex-margin-b text-blue">
                                                 <a class="product-text-two" href="{% url 'product_detail' %}?category_product={{ category }},{{ product.name }},selected-one">{{ product.name }}</a>
                                                 <span class="allergy-text">
@@ -81,6 +81,9 @@
                                                     {% if product.allergies|slice:"3:4" == '1' %}
                                                         <i class="fas fa-allergies"></i>
                                                     {% endif %}
+                                                    {% if product.allergies|slice:"4:5" == '1' %}
+                                                        <i class="fas fa-mitten"></i>
+                                                    {% endif %}
                                                 </span>
                                                 <span class="product-text-two float-right">£{{ product.price }}</span>
                                             </div>
@@ -95,7 +98,7 @@
                                 {% endfor %}
                                 <hr class="mb-0 ml-0" />
                                 <br class="d-none d-xl-block">
-                                <span class="allergy-text text-lightblue">* vegan <i class="fas fa-carrot"></i>, vegetarian <i class="fas fa-leaf"></i>, pescetarian <i class="fas fa-fish"></i> and allergy-advice <i class="fas fa-allergies"></i></span>
+                                <span class="allergy-text text-lightblue">* vegan <i class="fas fa-carrot"></i>, vegetarian <i class="fas fa-leaf"></i>, pescetarian <i class="fas fa-fish"></i>, allergy-advice <i class="fas fa-allergies"></i> and can-be-served-hot <i class="fas fa-mitten"></i></span>
                             </div>
                         </div>
                     </div>
