--- a/products/templates/products/search_products.html
+++ b/products/templates/products/search_products.html
@@ -46,6 +46,9 @@
                                                 {% if product.allergies|slice:"3:4" == '1' %}
                                                     <i class="fas fa-allergies"></i>
                                                 {% endif %}
+                                                {% if product.allergies|slice:"4:5" == '1' %}
+                                                    <i class="fas fa-mitten"></i>
+                                                {% endif %}
                                             </span>
                                         </div>
                                         <div class ="col-3">
@@ -55,7 +58,7 @@
                                 {% endfor %}
                                 <hr class="mb-0 ml-0" />
                                 <br class="d-none d-xl-block">
-                                <span class="allergy-text text-lightblue">* vegan <i class="fas fa-carrot"></i>, vegetarian <i class="fas fa-leaf"></i>, pescetarian <i class="fas fa-fish"></i> and allergy-advice <i class="fas fa-allergies"></i></span>
+                                <span class="allergy-text text-lightblue">* vegan <i class="fas fa-carrot"></i>, vegetarian <i class="fas fa-leaf"></i>, pescetarian <i class="fas fa-fish"></i>, allergy-advice <i class="fas fa-allergies"></i> and can-be-served-hot <i class="fas fa-mitten"></i></span>
                             </div>
                         </div>
                     </div>
