--- a/templates/includes/contact.html
+++ b/templates/includes/contact.html
@@ -1,5 +1,5 @@
     <!-- Contact-->
-    <section class="contact-section bg-blue">
+    <section class="contact-section bg-contact">
         <div class="container">
             <div class="row">
                 <div class="col-xl-4 mb-3 mb-md-0">
