--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -122,13 +122,20 @@
                                                 <div class="product-text-header bold">£0.00</div>
                                             {% endif %}
                                         </div>
-                                        <div class="col-4 my-auto">
-                                        </div>
-                                        <div class="col-4 my-auto">
+                                        <div class="col-8 my-auto">
                                             {% if basket_total.total_price__sum != None  %}
-                                                <a class="checkout-button border-solid masthead-button btn btn-primary js-scroll-trigger" 
-                                                    href="{% url 'checkout' %}?basket_number={{ cookie }}">
-                                                    <i class="fa fa-shopping-basket" aria-hidden="true"></i> checkout</a>
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <a class="delete-button border-solid masthead-button btn btn-primary js-scroll-trigger" id="empty-basket"
+                                                            href="{% url 'empty_basket' %}">
+                                                            <i class="fas fa-trash-alt" aria-hidden="true"></i> empty basket</a>
+                                                    </div>
+                                                    <div class="col-6">
+                                                        <a class="checkout-button border-solid masthead-button btn btn-primary js-scroll-trigger" 
+                                                            href="{% url 'checkout' %}?basket_number={{ cookie }}">
+                                                            <i class="fa fa-shopping-basket" aria-hidden="true"></i> checkout</a>
+                                                    </div>
+                                                </div>
                                             {% endif %}
                                         </div>
                                     </div>
